# pilot-QA

./: .env.example  .gitignore  README.md  prompts.md  pyproject.toml
examples/: smoke_test_explorer.py
src/playwright_pilot/: __init__.py  explorer.py  llm_client.py  models.py  parser.py  planner.py
src/playwright_pilot/prompts/: planner.txt
tests/: test_models.py  test_parser.py  test_planner.py
