[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwright-pilot"
version = "0.1.0"
description = "Browser automation pilot using Playwright and LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Yusuf"},
]
dependencies = [
    "playwright>=1.45",
    "openai>=1.50",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_pilot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
